assets/scss/main.scss
@import "node_modules/@patternfly/patternfly/sass-utilities/all.scss";

$pf-global--font-path: "./{{ .Site.BaseURL }}/fonts";
$fa-font-path: $pf-global--font-path + "/webfonts";

@import "node_modules/@patternfly/patternfly/patternfly.scss";
@import "node_modules/@patternfly/patternfly/patternfly-addons.scss";

.pf-x-m-no-decoration {
  text-decoration: none !important;
}

.pf-x-u-text-center {
  text-align: center;
}

.highlight {
  @extend .pf-u-my-md, .pf-c-card, .pf-m-flat;

  > pre {
    @extend .pf-u-p-md;

    overflow-x: auto;
  }
}

.pf-x-c-article__header {
  max-height: 35rem;
  object-fit: cover;
}

.pf-c-avatar--main {
  width: 250px;
  height: 100%;
  object-fit: cover;
}

.pf-x-person__header {
  max-width: 1024px;
  margin: 3rem auto;

  @media screen and (min-width: 1146px) {
    margin-bottom: 0 !important;
  }

  &,
  .pf-c-dropdown__toggle {
    color: var(--pf-global--Color--light-100);
  }
}

.pf-x-c-avatar__figcaption {
  margin-left: auto;
  transform: translateY(50%);
}

.pf-c-card--overlay {
  transform: translateY(50%);
  max-width: 825px;
  margin: 0 auto;

  @media screen and (max-width: 1145px) {
    transform: translateY(0);
  }
}

.pf-x-commitwrapper {
  @media screen and (min-width: 1146px) {
    margin-bottom: 0 !important;
  }
}

.lastcommit__user__url > img {
  margin-bottom: -0.4rem;
}

.pf-c-code-block__actions--info {
  margin-left: 0;
  width: 100%;
  justify-content: space-between;
}

.pf-x-u-transparent {
  background: transparent;
}

.pf-x-octocat {
  width: 100px;
}

.pf-x-u-blur {
  backdrop-filter: blur(7.5px);
  -webkit-backdrop-filter: blur(7.5px);
  background: rgba(0, 0, 0, 0.8) !important;
}

.pf-c-page--background::before {
  content: "";
  background: url(https://source.unsplash.com/featured?sunset);
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: cover;
  filter: blur(7.5px);
  height: 100%;
  width: 100%;
  position: fixed;
  transform: scale(1.1);
}

.pf-c-card__header-main__img {
  width: 100%;
  height: 300px;
  object-fit: cover;
}

.pf-c-card__header-main--fluid {
  width: 100%;
}

.pf-x-commitwrapper {
  z-index: 10;
}

.pf-l-grid--max-width,
.pf-c-page__main-section--max-width,
.pf-x-c-footer--max-width,
.pf-x-c-projects--max-width,
.pf-c-page__header__content--max-width {
  width: 1128px;
  max-width: 100%;
  margin: 0 auto;
}

.pf-c-page__header__content--max-width {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.pf-c-page__header--max-width {
  display: flex;
  align-items: center;
  justify-content: center;
}

.pf-c-page__header-tools--max-width {
  margin: 0 !important;
  width: 100%;
  max-width: 1128px;
  display: flex;
  align-items: center;
  justify-content: end;

  & .pf-c-page__header-tools--max-width {
    width: auto;
    flex: 1;
  }
}

.pf-c-page__header--overlay {
  background: transparent;
  position: fixed;
  left: 0;
  right: 0;
  height: 100px;
}

.pf-c-page__main--with-overlay {
  padding-top: 100px;
}

.pf-x-u-nowrap {
  white-space: nowrap;
  overflow-x: auto;
}

.lastcommit {
  width: calc(100%);

  @media screen and (min-width: 768) {
    width: calc(100% - 100px);
  }
}

.pf-x-u-live {
  background: var(--pf-global--success-color--100);
  color: var(--pf-global--Color--light-100);
}

.pf-x-u-offline {
  background: var(--pf-global--danger-color--100);
  color: var(--pf-global--Color--light-100);
}

.pf-x-u-transparent {
  background: transparent;
}

.pf-c-page__header-brand-link--no-decoration {
  color: var(--pf-global--Color--light-100);
  text-decoration: none;
}

.pf-c-avatar--navbar {
  width: 60px;
  height: 100%;
  object-fit: cover;
}

.pf-c-avatar--hover {
  .pf-c-avatar--navbar {
    transition: transform 0.7s ease-in-out;
  }

  &:hover {
    .pf-c-avatar--navbar {
      transform: rotate(-5deg) scale(1.1);
    }
  }
}

.pf-x-m-no-highlight--dark {
  color: var(--pf-global--Color--light-100);
}

.pf-l-gallery--max-350 {
  --pf-l-gallery--GridTemplateColumns--min: 350px;

  @media screen and (max-width: 412px) {
    --pf-l-gallery--GridTemplateColumns--min: calc(100vw-48px);
  }
}

.pf-l-gallery--max-500 {
  --pf-l-gallery--GridTemplateColumns--min: 365px;

  @media screen and (max-width: 412px) {
    --pf-l-gallery--GridTemplateColumns--min: calc(100vw-48px);
  }
}

.pf-x-u-color-light-100 {
  color: var(--pf-global--BackgroundColor--100);
}

.pf-x-u-color-light-200 {
  color: var(--pf-global--BackgroundColor--200);
}

.pf-c-chip--transparent {
  background: #fffffff5;
}

.pf-x-u-no-shadow {
  box-shadow: none;
}

.pf-x-u-overflow-x-auto {
  overflow-x: auto;
}

.pf-x-u-white-space-nowrap {
  white-space: nowrap;
}

.streamstatus__channel__badge {
  height: 1.25rem;
  min-width: 10rem;
  object-fit: scale-down;
}

.pf-x-u-navbar__title {
  @media screen and (max-width: 767px) {
    text-overflow: ellipsis;
    max-width: 12rem;
    white-space: nowrap;
    overflow-x: hidden;
  }
}

.pf-c-page__header__content--max-width--home > * {
  margin-left: auto;
}

